--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Import Secrets
-        uses: hashicorp/vault-actions
+        uses: hashicorp/vault-action@v2.4.0
         with:
           url: https://vault-east-1.theneutral.zone:8200
           tlsSkipVerify: true
